# pk-regression

./: README.md  pyproject.toml
src/pk_regression/: conditional_mode.py  fractional_differencing.py  periodic_splines.py
tests/: test_conditional_mode.py  test_fractional_differencing.py  test_periodic_splines.py
